--- a/_server/templates/home.templ
+++ b/_server/templates/home.templ
@@ -23,7 +23,7 @@ templ Home(lastUpdate *time.Time, t translations.Translations) {
 							class="form-control"
 							id="location"
 							name="location"
-							placeholder="{ t.LocationPlaceholder }"
+							placeholder={ t.LocationPlaceholder }
 						/>
 					</div>
 					<p class="form-text">{ t.LocationExample }</p>
